--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-
+    <meta property="og:type" content="website"> 
+    <meta property="og:site_name" content="app.trustless.fund"> 
+    <meta property="og:image" content="https://i.imgur.com/4cinMOz.png"> 
+    <meta property="og:description" content="Advanced timelock for ETH and ERC-20 assets."> 
+    <meta property="twitter:card" content="summary_large_image"> 
+    <meta property="twitter:creator" content="@trustlessfund">
+    <meta property="twitter:title" content="Trustless Fund"> 
+    <meta property="twitter:description" content="Advanced timelock for ETH and ERC-20 assets.">
+    <meta property="twitter:image" content="https://i.imgur.com/4cinMOz.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
